--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "commit": "cz",
     "dev": "vite",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
@@ -26,6 +27,8 @@
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.13",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "npm-run-all": "^4.1.5",
@@ -36,5 +39,10 @@
     "unplugin-auto-import": "^0.15.0",
     "vite": "^4.0.0",
     "vue-tsc": "^1.0.12"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
