--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "pnpm lint-eslint && pnpm lint-stylelint",
+    "lint-eslint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "lint-stylelint": "stylelint ./**/*.{css,sass,scss} --fix --ignore-path .gitignore"
   },
   "dependencies": {
     "element-plus": "^2.2.32",
@@ -35,6 +37,11 @@
     "postcss": "^8.4.21",
     "prettier": "^2.7.1",
     "sass": "^1.58.3",
+    "stylelint": "^14.0.0",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-sass-guidelines": "^9.0.1",
+    "stylelint-config-standard-scss": "^5.0.0",
+    "stylelint-prettier": "^3.0.0",
     "typescript": "~4.7.4",
     "unplugin-auto-import": "^0.15.0",
     "vite": "^4.0.0",
