--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "commit": "cz",
     "dev": "vite",
-    "build": "run-p type-check build-only",
+    "build": "pnpm type-check && pnpm build-only",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit",
@@ -33,7 +33,6 @@
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
-    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "prettier": "^2.7.1",
     "sass": "^1.58.3",
