--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "postcss": "^8.4.21",
     "prettier": "^2.7.1",
     "sass": "^1.58.3",
+    "semantic-release": "^20.1.3",
     "stylelint": "^14.0.0",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-sass-guidelines": "^9.0.1",
@@ -50,5 +51,20 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
+  },
+  "release": {
+    "branches": [
+      "main"
+    ],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/github",
+      ["@aghap/semantic-release-gh-pages", {
+        "src": "aaa",
+        "ghpBranch": "gh-pages",
+        "ghpPath": "./"
+      }]
+    ]
   }
 }
