--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@aghap/semantic-release-gh-pages": "^1.0.0",
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/node": "^18.11.12",
     "@vitejs/plugin-vue": "^4.0.0",
@@ -61,11 +62,14 @@
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
       "@semantic-release/github",
-      ["@aghap/semantic-release-gh-pages", {
-        "src": "aaa",
-        "ghpBranch": "gh-pages",
-        "ghpPath": "./"
-      }]
+      [
+        "@aghap/semantic-release-gh-pages",
+        {
+          "src": "aaa",
+          "ghpBranch": "gh-pages",
+          "ghpPath": "./"
+        }
+      ]
     ]
   }
 }
