--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -16,6 +16,9 @@ jobs:
           version: latest
       - name: Setup Node.js environment
         uses: actions/setup-node@v3
+        with:
+          node-version: latest
+          cache: pnpm
       - name: Install deps
         run: pnpm install
       - name: Build
