--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
         {
           "src": "aaa",
           "ghpBranch": "gh-pages",
-          "ghpPath": "./"
+          "ghpPath": "./",
+          "message": "chore(release): GitHub Pages release"
         }
       ]
     ]
