--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -10,10 +10,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: Setup PNPM environment
         uses: pnpm/action-setup@v2
         with:
-          version: latest
+          version: 7
       - name: Setup Node.js environment
         uses: actions/setup-node@v3
         with:
