--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "stylelint-config-sass-guidelines": "^9.0.1",
     "stylelint-config-standard-scss": "^5.0.0",
     "stylelint-prettier": "^3.0.0",
+    "ts-keycode-enum": "^1.0.6",
     "typescript": "~4.7.4",
     "unplugin-auto-import": "^0.15.0",
     "vite": "^4.0.0",
