--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@aghap/semantic-release-gh-pages": "^2.0.9",
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/node": "^18.11.12",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
