--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "element-plus": "^2.2.32",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.28",
     "tailwindcss": "^3.2.7",
     "vue": "^3.2.45",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@aghap/semantic-release-gh-pages": "^2.0.9",
     "@rushstack/eslint-patch": "^1.1.4",
+    "@types/lodash": "^4.14.194",
     "@types/node": "^18.11.12",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@vitejs/plugin-vue": "^4.0.0",
