--- a/package.json
+++ b/package.json
@@ -29,29 +29,29 @@
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/lodash": "^4.14.194",
     "@types/node": "^18.11.12",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
+    "@vue/eslint-config-prettier": "^8.0.0",
+    "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.13",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.22.0",
-    "eslint-plugin-vue": "^9.3.0",
-    "postcss": "^8.4.21",
-    "prettier": "^2.7.1",
+    "eslint": "^8.54.0",
+    "eslint-plugin-vue": "^9.18.1",
+    "postcss": "^8.4.31",
+    "prettier": "^3.1.0",
     "sass": "^1.58.3",
     "semantic-release": "^20.1.3",
-    "stylelint": "^15.0.0",
+    "stylelint": "^15.11.0",
     "stylelint-config-prettier": "^9.0.5",
-    "stylelint-config-sass-guidelines": "^9.0.1",
-    "stylelint-config-standard-scss": "^5.0.0",
-    "stylelint-prettier": "^3.0.0",
+    "stylelint-config-sass-guidelines": "^10.0.0",
+    "stylelint-config-standard-scss": "^11.1.0",
+    "stylelint-prettier": "^4.1.0",
     "svgo": "^3.0.2",
     "ts-keycode-enum": "^1.0.6",
-    "typescript": "~4.7.4",
+    "typescript": "^5.3.2",
     "unplugin-auto-import": "^0.15.0",
     "vite": "^4.0.0",
     "vue-tsc": "^1.0.12"
