--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "pnpm lint-eslint && pnpm lint-stylelint",
     "lint-eslint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "lint-stylelint": "stylelint ./**/*.{css,sass,scss} --fix --ignore-path .gitignore",
+    "clean": "rimraf pnpm-lock.yaml node_modules dist",
     "release": "semantic-release",
     "svgo": "svgo -rf src"
   },
@@ -42,6 +43,7 @@
     "eslint-plugin-vue": "^9.18.1",
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
+    "rimraf": "^5.0.5",
     "sass": "^1.58.3",
     "semantic-release": "^20.1.3",
     "stylelint": "^15.11.0",
