--- a/package.json
+++ b/package.json
@@ -18,24 +18,25 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.1.2",
-    "element-plus": "^2.2.32",
+    "element-plus": "^2.4.3",
     "lodash": "^4.17.21",
     "pinia": "^2.0.28",
     "tailwindcss": "^3.2.7",
-    "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue": "^3.3.9",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@aghap/semantic-release-gh-pages": "^2.0.9",
     "@rushstack/eslint-patch": "^1.1.4",
+    "@tsconfig/node20": "^20.1.2",
     "@types/lodash": "^4.14.194",
-    "@types/node": "^18.11.12",
+    "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/tsconfig": "^0.1.3",
+    "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.13",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
@@ -56,7 +57,7 @@
     "typescript": "^5.3.2",
     "unplugin-auto-import": "^0.15.0",
     "vite": "^4.0.0",
-    "vue-tsc": "^1.0.12"
+    "vue-tsc": "^1.8.24"
   },
   "config": {
     "commitizen": {
