--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
   },
   "devDependencies": {
     "@aghap/semantic-release-gh-pages": "^2.0.9",
+    "@octokit/openapi-types": "^19.1.0",
+    "@octokit/rest": "^20.0.2",
     "@rushstack/eslint-patch": "^1.1.4",
     "@tsconfig/node20": "^20.1.2",
+    "@types/fs-extra": "^11.0.4",
     "@types/lodash": "^4.14.194",
     "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
@@ -42,6 +45,7 @@
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.54.0",
     "eslint-plugin-vue": "^9.18.1",
+    "fs-extra": "^11.2.0",
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "rimraf": "^5.0.5",
