--- a/tsconfig.config.json
+++ b/tsconfig.config.json
@@ -1,6 +1,6 @@
 {
   "extends": "@tsconfig/node20/tsconfig.json",
-  "include": ["vite.config.*", "vitest.config.*", "cypress.config.*", "playwright.config.*"],
+  "include": ["vite.config.*", "vitest.config.*", "cypress.config.*", "playwright.config.*", "build/**/*.ts"],
   "compilerOptions": {
     "composite": true,
     "types": ["node"]
